Addressed PR comments and also incorporated Ravi's performance improvement changes